[gd_scene load_steps=11 format=3 uid="uid://bjn7n5sftr527"]

[ext_resource type="Script" path="res://src/player.gd" id="1_gkgg5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_otun0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_51ay2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_r134a"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_u5pr0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_merek"]
albedo_color = Color(0.298039, 0.219608, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7ifnq"]
material = SubResource("StandardMaterial3D_merek")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o6swy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3jcwy"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.419608)

[sub_resource type="CylinderMesh" id="CylinderMesh_0eup7"]
material = SubResource("StandardMaterial3D_3jcwy")
top_radius = 0.0
bottom_radius = 0.3
height = 1.0

[node name="PlayerRogueLeader" type="CharacterBody3D" groups=["timeline_actor"]]
wall_min_slide_angle = 0.0
script = ExtResource("1_gkgg5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_7ifnq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_o6swy")

[node name="Facing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 1)
mesh = SubResource("CylinderMesh_0eup7")

[node name="State" type="Node" parent="."]
script = ExtResource("3_otun0")

[node name="Root" type="Node" parent="State"]
script = ExtResource("4_51ay2")
initial_state = NodePath("Free")

[node name="Free" type="Node" parent="State/Root"]
script = ExtResource("4_51ay2")
initial_state = NodePath("Waiting")

[node name="Waiting" type="Node" parent="State/Root/Free"]
script = ExtResource("5_r134a")

[node name="onMoveSelected" type="Node" parent="State/Root/Free/Waiting"]
script = ExtResource("6_u5pr0")
to = NodePath("../../Moving")
event = &"move_selected"

[node name="Moving" type="Node" parent="State/Root/Free"]
script = ExtResource("5_r134a")

[node name="onMoveCompleted" type="Node" parent="State/Root/Free/Moving"]
script = ExtResource("6_u5pr0")
to = NodePath("../../Waiting")
event = &"move_completed"

[node name="onMoveTimeout" type="Node" parent="State/Root/Free/Moving"]
script = ExtResource("6_u5pr0")
to = NodePath("../../Waiting")
event = &"move_timeout"

[connection signal="state_entered" from="State/Root/Free/Waiting" to="." method="_on_waiting_state_entered"]
[connection signal="state_exited" from="State/Root/Free/Waiting" to="." method="_on_waiting_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Free/Waiting" to="." method="_on_waiting_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Free/Moving" to="." method="_on_moving_state_entered"]
[connection signal="state_exited" from="State/Root/Free/Moving" to="." method="_on_moving_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Free/Moving" to="." method="_on_moving_state_physics_processing"]
